--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
 Django==4.0.4
+django-widget-tweaks==1.4.12
 idna==3.3
 lxml==4.8.0
 multitasking==0.0.10
@@ -12,5 +13,6 @@ pytz==2022.1
 requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
+ta==0.10.1
 urllib3==1.26.9
 yfinance==0.1.70
